--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.couchbase.lite</groupId>
-            <artifactId>couchbase-lite-java</artifactId>
-            <version>3.2.1</version>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.49.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
